# Template

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Setup.bat
Cuda/CudaTest/: CMakeLists.txt  VectorAdd.cu
Source/Mathematics/: CMakeLists.txt
Source/Mathematics/Calculus/: AutoDifferential.cpp  AutoDifferential.h
Source/Mathematics/LinearAlgebra/: CMakeLists.txt  Interval.h  Tensor.h  TestGit.h  TupleArray.h
Tests/: CMakeLists.txt  main.cpp  main1.cpp
Tests/GLFWTest/: CMakeLists.txt  GLFW.cpp
Tests/UniversalTest/: CMakeLists.txt  main.cpp
